--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* font families */
+@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -108,6 +111,10 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+}
+
+@theme {
+  --font-unbounded: "Unbounded", sans-serif;
 }
 
 @layer base {
