--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 /* font families */
 @import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Stack+Sans+Text:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 
 @import "tailwindcss";
 @import "tw-animate-css";
@@ -117,6 +118,7 @@
 @theme {
   --font-unbounded: "Unbounded", sans-serif;
   --font-stack: "Stack Sans Text", sans-serif;
+  --font-oswald: "Oswald", sans-serif;
 }
 
 @layer base {
